fix nav position mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -364,6 +364,7 @@ figcaption {
     background: none;
     border: 2.5px solid #cdcdcd;
     border-radius: 0px;
+    margin-top: 8px;
   }
 
   .post-header {
